Fixed wrong Background-color of DarkMode-Switch

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,9 +186,4 @@
 		padding-left: 0;
 		width: auto;
 	}
-
-	.dark-mode {
-		color: white;
-		background-color: black;
-	}
 }
